Fix: Layout issues

--- a/src/assets/styles/scss/components/_left-menu.scss
+++ b/src/assets/styles/scss/components/_left-menu.scss
@@ -13,7 +13,7 @@
   box-sizing: border-box;
   min-width: fit-content;
   transition: 0.5s all ease;
-  @include bp.bp(mid-desktop3) {
+  @include bp.bp(ipad-mini) {
     position: absolute;
     left: 0;
     transform: translate(-100%);
